# coffee-consumption-report

./: README.md  pyproject.toml
docs/: architecture.md  development.md  git-workflow.md
src/coffee_report/: __init__.py  app.py  cli.py
src/coffee_report/domain/: __init__.py  exceptions.py  models.py
src/coffee_report/infrastructure/: __init__.py  csv_loader.py  formatter.py
src/coffee_report/reports/: __init__.py  base.py  median_coffee.py  registry.py
tests/: __init__.py  conftest.py  test_cli.py  test_csv_loader.py  test_median_coffee_report.py
