[project]
name = "coffee-report"
version = "0.1.0"
description = "Generate reports from coffee consumption data"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Alex", email = "chistovreal@gmail.com"}
]
dependencies = [
    "tabulate>=0.9.0",
]

[tool.ruff]
line-length = 110
exclude = ["**/migrations"]

[tool.ruff.lint]
select = ["ALL"]

# Поддерживаемые категории ошибок:
# E, F — ошибки PyFlakes/pycodestyle
# W — предупреждения pycodestyle
# I — импорты (isort)
# C — цикломатическая сложность
# N — именования
# Q — логические ошибки Ruff
# T — типы (Type Checking)

extend-ignore = ["E203"] 
ignore = ["D203", "D213", "COM812", "S101"]
extend-select = []
allowed-confusables = [
    "А", "В", "С", "Е", "Н", "К", "М", "О", "Р", "Т", "Х", "Ь", "Ы", "І", "Ј", "Ӏ",
    "а", "е", "с", "о", "р", "у", "х", "б", "і", "ј", "ӏ", "У", "З",
    "Α", "Β", "Ε", "Ζ", "Η", "Ι", "Κ", "Μ", "Ν", "Ο", "Ρ", "Τ", "Υ", "Χ",
    "α", "β", "ε", "ζ", "η", "ι", "κ", "ν", "ο", "ρ", "τ", "υ", "χ"
]